fix dark mode not working

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -78,7 +78,8 @@
   --sidebar-ring: oklch(0.708 0 0);
 }
 
-.dark {
+.dark,
+:root[class~="dark"] {
   --dark-foreground: rgb(0, 0, 0);
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
